<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

   <View
       android:id="@+id/container_header"
       android:layout_width="match_parent"
       android:layout_height="100dp"
       android:background="@drawable/container_header"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ImageView
       android:id="@+id/Imagem_beberagua"
       android:layout_width="100dp"
       android:layout_height="80dp"
       android:src="@drawable/beberagua"
       app:layout_constraintTop_toTopOf="@id/container_header"
       app:layout_constraintStart_toStartOf="@id/container_header"
       android:layout_marginTop="20dp"
       android:layout_marginStart="20dp"
       android:contentDescription="@string/todo"
       tools:ignore="ContentDescription" />

   <ImageView
       android:id="@+id/ic_redefinir"
       android:layout_width="60dp"
       android:layout_height="40dp"
       android:src="@drawable/ic_refresh"
       app:layout_constraintTop_toTopOf="@id/container_header"
       app:layout_constraintEnd_toEndOf="@id/container_header"
       android:layout_marginTop="30dp"
       android:layout_marginEnd="20dp"
       tools:ignore="ContentDescription" />

   <EditText
       android:id="@+id/edit_peso"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:hint="@string/hint_peso"
       android:textColorHint="@color/purple_200"
       android:padding="15dp"
       android:textColor="@color/teal_200"
       android:textSize="18sp"
       android:textStyle="bold"
       app:layout_constraintTop_toBottomOf="@id/container_header"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="30dp"
       android:layout_marginStart="20dp"
       android:inputType="numberDecimal"
       android:maxLength="7"
       android:gravity="center"/>

   <EditText
       android:id="@+id/edit_idade"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:hint="@string/hint_idade"
       android:textColorHint="@color/purple_200"
       android:padding="15dp"
       android:textColor="@color/teal_200"
       android:textSize="18sp"
       android:textStyle="bold"
       app:layout_constraintTop_toBottomOf="@id/container_header"
       app:layout_constraintStart_toEndOf="@id/edit_peso"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="30dp"
       android:layout_marginEnd="20dp"
       android:inputType="number"
       android:maxLength="3"
       android:gravity="center"/>

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/bt_calcular"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/button_calcular"
       android:textColor="@color/white"
       android:textStyle="bold"
       android:textSize="18sp"
       android:padding="15dp"
       android:background="@drawable/bg_degrade_button"
       android:layout_margin="20dp"
       app:layout_constraintTop_toBottomOf="@id/edit_peso"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />


   <View
       android:id="@+id/container_resultado_ml"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:layout_marginTop="20dp"
       android:layout_marginStart="50dp"
       android:layout_marginEnd="50dp"
       android:background="@drawable/container_resultado_ml"
       app:layout_constraintTop_toBottomOf="@id/bt_calcular"
       app:layout_constraintStart_toStartOf="parent"/>

   <TextView
       android:id="@+id/txt_resultado_ml"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text=""
       android:textSize="35sp"
       android:textColor="@color/black"
       android:textStyle="bold"
       app:layout_constraintTop_toTopOf="@id/container_resultado_ml"
       app:layout_constraintStart_toStartOf="@id/container_resultado_ml"
       app:layout_constraintEnd_toEndOf="@id/container_resultado_ml"
       app:layout_constraintBottom_toBottomOf="@id/container_resultado_ml"/>

   <Button
       android:id="@+id/bt_definir_lembrete"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/text_button_lembrete"
      android:textSize="18sp"
      android:textStyle="bold"
      android:textColor="@color/white"
      app:layout_constraintTop_toBottomOf="@id/container_resultado_ml"
      app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="20sp"
       android:layout_marginStart="20dp"/>


   <Button
       android:id="@+id/bt_alarme"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/text_button_alarm"
       android:textSize="18sp"
       android:textStyle="bold"
       android:textColor="@color/white"
       app:layout_constraintTop_toBottomOf="@id/container_resultado_ml"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="20sp"
       android:layout_marginEnd="20dp"/>

   <TextView
       android:id="@+id/txt_hora"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/text_hora"
       android:textSize="35sp"
       android:textColor="@color/black"
       android:layout_marginTop="20dp"
       android:layout_marginStart="150dp"
       app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete"
       app:layout_constraintStart_toStartOf="parent"/>

   <TextView
       android:id="@+id/txt_dois_pontos"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/text_dois_pontos"
       android:textSize="35sp"
       android:textColor="@color/black"
       android:layout_marginTop="20dp"
       android:layout_marginStart="5dp"
       app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete"
       app:layout_constraintStart_toEndOf="@id/txt_hora"/>

   <TextView
       android:id="@+id/txt_minutos"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/text_minutos"
       android:textSize="35sp"
       android:textColor="@color/black"
       android:layout_marginTop="20dp"
       android:layout_marginStart="5dp"
       app:layout_constraintTop_toBottomOf="@id/bt_definir_lembrete"
       app:layout_constraintStart_toEndOf="@id/txt_dois_pontos"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>